--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-  apiKey=AIzaSyAoMSgV2xpZhZF1Ony4LfrUO1AET3xu_7E
-  authDomain=blood-bank-8ffd4.firebaseapp.com
-  projectId=blood-bank-8ffd4
-  storageBucket=blood-bank-8ffd4.appspot.com
-  messagingSenderId=114995206419
-  appId=1:114995206419:web:9074dbe628cb9b4e07e2e6
-  measurementId=G-K0RJR0E4YR
+  apiKey=apiKey
+  authDomain=authDomain
+  projectId=projectId
+  storageBucket=storageBucket
+  messagingSenderId=messagingSenderId
+  appId=your_appId
+  measurementId=measurementId
