--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "blood_bank",
+    "name": "LifeSaver: Your Virtual Blood Bank",
     "slug": "blood_bank",
     "version": "1.0.0",
     "orientation": "portrait",
