--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.4.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "~3.31.1"
   },
