--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^3.2.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
@@ -16,10 +17,12 @@
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.4.0",
     "react": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "~3.31.1"
+    "react-native-screens": "~3.31.1",
+    "react-native-web": "^0.19.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
